feat: front-end register tutor component